Tue Jan 13 23:31:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/dds:
        * java/idl2jni/codegen:
        * java/idl2jni/codegen/idl2jni_visitor.cpp:
        * java/idl2jni/codegen/idl_mapping.h:
        * java/idl2jni/codegen/idl_mapping.cpp:
        * java/idl2jni/codegen/im_java.cpp:
        * java/idl2jni/codegen/im_jni.cpp:
        * java/idl2jni/tests/simple/idl2jni_test_simple.mpc:
        * java/idl2jni/tests/simple/simple.idl:

          Added support for IDL attributes (idl2jni).

Tue Jan 13 18:17:43 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Demoted failure to set IPV4 TOS field to an informational
          message.

        * performance-tests/DCPS/Priority/Options.h:

          Included configuration files before use of pragma once.

        * performance-tests/DCPS/Priority/PublicationProfile.cpp:

          Undef min and max in order to use the STL algorithm versions of
          these functions.

Mon Jan 12 22:41:27 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/Priority/Options.cpp:
        * tests/DCPS/Priority/Options.cpp:

          Explicitly use unsigned constants to intialize pairs to
          eliminate a Sun compiler error.

Mon Jan 12 21:40:57 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * performance-tests/DCPS/Priority/publisher_main.cpp:
        * performance-tests/DCPS/Priority/subscriber_main.cpp:
        * tests/DCPS/Priority/publisher_main.cpp:
        * tests/DCPS/Priority/subscriber_main.cpp:

          Hide unused catch parameter to remove compiler warnings.

Mon Jan 12 21:25:31 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/DataLink.cpp:

          Remove value from return in a void method.

Mon Jan 12 19:00:48 UTC 2009  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/framework/NullSynchStrategy.h: