@@ -1,3 +1,9 @@
+Wed Jan 14 16:46:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>
+
+        * java/idl2jni/codegen/im_jni.cpp:
+
+          Fixed gcc error (passing non-const ref to temporary).
+
 Tue Jan 13 23:31:18 UTC 2009  Steven Stallion  <stallions@ociweb.com>
 
         * java/dds:
